Changement de Groupe de recherche en Équipe de recherche
- Sur l'espace chercheur
- Sur la fiche d'inscription au répertoire
- Sur les fiches chercheurs en consultation

--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -167,7 +167,7 @@ emit_source('savoirsenpartage_chercheurs',
                       p.prenom AS prenom,
                       CONCAT(p.nom, ' ', p.prenom) AS nom_complet,
                       c.theme_recherche AS theme_recherche,
-                      c.groupe_recherche AS groupe_recherche,
+                      c.equipe_recherche AS equipe_recherche,
                       c.mots_cles AS mots_cles,
                       c.membre_instance_auf AS membre_instance_auf,
                       c.expert_oif AS expert_oif,
