--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -190,7 +190,7 @@ emit_source('savoirsenpartage_chercheurs',
                       CASE pays.nord_sud WHEN 'Nord' THEN 1 
                                          WHEN 'Sud' THEN 2 
                                          END AS nord_sud,
-                      CASE statut WHEN 'enseignant' THEN 1
+                      CASE c.statut WHEN 'enseignant' THEN 1
                                   WHEN 'etudiant' THEN 2
                                   WHEN 'independant' THEN 3
                                   END AS statut,
