Ajout de django-selectable et autocomplete dans Interfaces

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -43,6 +43,7 @@ eggs = auf_references_client==0.4.9
     MySQL-python
     simplejson
     django-alphafilter==0.5.3auf4
+    django-selectable==0.2
 
 
 [articles]
