buildout nouvelle déclaration de version django

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 newest = false
 parts = django articles harvest sphinx_config alertes_courriel
+versions = versions
 find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_client/
     http://pypi.auf.org/auf_references_modeles/
@@ -13,7 +14,6 @@ find-links = http://pypi.auf.org/caldav/
 
 [django]
 recipe = djangorecipe
-version = 1.2.5
 project = auf_savoirs_en_partage
 wsgi = true
 settings = production
@@ -70,3 +70,5 @@ recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
 template = alertes_courriel.in
 
+[versions]
+django = 1.2.5
