[#2598] Migration de SEP vers python 2.6

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 newest = false
 parts = django articles harvest sphinx_config alertes_courriel
 versions = versions
-find-links = http://pypi.auf.org/caldav/
+find-links =
     http://pypi.auf.org/auf_references_client/
     http://pypi.auf.org/auf_references_modeles/
     http://pypi.auf.org/datamaster_modeles/
@@ -19,13 +19,14 @@ wsgi = true
 version = 1.2.5
 settings = production
 extra-paths = auf_savoirs_en_partage
-eggs = auf_references_client==0.4.9
+eggs =
+    auf_references_client==0.4.9
     Babel==0.9.5
-    caldav==0.1.4.3-auf
+    caldav==0.1.12
     chardet==1.0.1
     pytz==2010l
     feedparser==4.1
-    BeautifulSoup==3.1.0.1
+    BeautifulSoup==3.2.0
     django_compressor==0.5.3
     django_pagination==1.0.7
     django_sorting==0.1
@@ -45,7 +46,6 @@ eggs = auf_references_client==0.4.9
     simplejson
     django-alphafilter==0.5.3auf4
     django-selectable==0.2
-
 
 [articles]
 recipe = buildout_script
