[#2481] Utiliser auf.django.references 0.5 pour SEP

--- a/devel.cfg
+++ b/devel.cfg
@@ -4,4 +4,6 @@ extends=buildout.cfg
 [django]
 wsgi=false
 settings=development
-eggs += django-debug-toolbar
+eggs =
+    ${buildout:eggs}
+    django-debug-toolbar
