--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ settings = production
 extra-paths = auf_savoirs_en_partage
 eggs = auf_references_client==0.4.9
     Babel==0.9.5
-    caldav==0.1.4.3-auf
+    caldav==0.1.12
     chardet==1.0.1
     pytz==2010l
     feedparser==4.1
