[#2830] Bugfix sur les évènements de l'agenda

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
-newest = false
+extends = versions.cfg
+extensions = buildout-versions
+buildout_versions_file = versions.cfg
 parts = django articles harvest sphinx_config alertes_courriel
 versions = versions
 find-links =
@@ -12,7 +14,6 @@ find-links =
     http://pypi.auf.org/auf.django.references/
     http://pypi.auf.org/auf.recipe.django/
     http://pypi.auf.org/django-alphafilter/
-
 eggs =
     auf_references_client
     Babel
@@ -74,30 +75,3 @@ template = sphinx.conf.py.in
 recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
 template = alertes_courriel.in
-
-[versions]
-auf.recipe.django = 1.1
-django = 1.2.5
-auf_references_client = 0.4.9
-Babel = 0.9.5
-caldav = 0.1.12
-chardet = 1.0.1
-pytz = 2010l
-feedparser = 4.1
-BeautifulSoup = 3.2.0
-django_compressor = 0.5.3
-django_pagination = 1.0.7
-django_sorting = 0.1
-django-roa = 2.6.2
-django-admin-tools = 0.3.0
-django-sphinx = 2.2.3
-django-flash = 1.7.2
-PyYAML = 3.09
-South = 0.7.3
-django_exportateur = 1.0
-python-dateutil = 1.5
-auf.django.admingroup = 0.3dev
-auf.django.auth = 0.5.5dev
-auf.django.references = 0.5
-django-alphafilter = 0.5.3auf4
-django-selectable = 0.2
