Pinné MySQL-python à la version 1.2.2

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,4 +1,9 @@
 [versions]
+
+# Versions installées sur le serveur de prod
+MySQL-python = 1.2.2
+
+# Versions sélectionnées avant l'utilisation de buildout-versions
 auf.recipe.django = 1.7
 django = 1.2.5
 auf_references_client = 0.4.9
