Pinné lxml à la version 2.2.8 (version sur le serveur de prod)

--- a/versions.cfg
+++ b/versions.cfg
@@ -2,6 +2,7 @@
 
 # Versions installées sur le serveur de prod
 MySQL-python = 1.2.2
+lxml = 2.2.8
 
 # Versions sélectionnées avant l'utilisation de buildout-versions
 auf.recipe.django = 1.7
