[#3091] Permettre le filtrage sur les régions inactives dans l'admin

--- a/versions.cfg
+++ b/versions.cfg
@@ -23,7 +23,6 @@ django_exportateur = 1.0
 python-dateutil = 1.5
 auf.django.admingroup = 0.3dev
 auf.django.auth = 0.5.5dev
-auf.django.references = 0.5
 django-alphafilter = 0.5.3auf4
 django-selectable = 0.2
 
@@ -85,3 +84,6 @@ zc.recipe.egg = 1.3.2
 
 # Added by Buildout Versions at 2012-04-17 18:07:32.342631
 django-admin-tools = 0.4.1
+
+# Added by Buildout Versions at 2012-05-14 14:12:13.933248
+auf.django.references = 0.16
