--- a/versions.cfg
+++ b/versions.cfg
@@ -1,9 +1,9 @@
 [versions]
 # Versions installées sur le serveur de prod
 lxml = 2.2.8
+setuptools = 0.6c12dev-r88846
 
 # Versions sélectionnées avant l'utilisation de buildout-versions
-auf.recipe.django = 1.7
 auf_references_client = 0.4.9
 Babel = 0.9.5
 caldav = 0.1.12
@@ -72,18 +72,25 @@ python-memcached = 1.48
 # caldav==0.1.12
 vobject = 0.8.1c
 
-# Required by:
-# auf.recipe.django==1.7
-# djangorecipe==1.1.2
-zc.buildout = 1.5.2
-
-# Required by:
-# auf.recipe.django==1.7
-# djangorecipe==1.1.2
-zc.recipe.egg = 1.3.2
-
 # Added by Buildout Versions at 2012-04-17 18:07:32.342631
 django-admin-tools = 0.4.1
 
 # Added by Buildout Versions at 2012-05-15 17:27:59.816025
 auf.django.references = 0.17
+
+# Added by Buildout Versions at 2012-09-07 14:03:25.927863
+auf.recipe.django = 2.1
+distribute = 0.6.28
+
+# Required by:
+# auf.recipe.django==2.1
+# djangorecipe==1.1.2
+zc.buildout = 1.6.3
+
+# Required by:
+# auf.recipe.django==2.1
+# djangorecipe==1.1.2
+zc.recipe.egg = 1.3.2
+
+# Added by Buildout Versions at 2012-09-07 14:05:19.695622
+raven = 2.0.6
