--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,10 +12,12 @@ find-links =
     http://pypi.auf.org/auf.django.references/
     http://pypi.auf.org/auf.recipe.django/
     http://pypi.auf.org/django-alphafilter/
+    http://pypi.auf.org/auf.django.piwik/
 eggs =
     auf.django.admingroup
     auf.django.auth
     auf.django.references
+    auf.django.piwik
     Babel
     BeautifulSoup
     caldav
