--- a/versions.cfg
+++ b/versions.cfg
@@ -94,3 +94,6 @@ zc.buildout = 1.6.3
 # auf.recipe.django==2.1
 # djangorecipe==1.1.2
 zc.recipe.egg = 1.3.2
+
+# Added by Buildout Versions at 2012-09-17 11:38:05.334278
+auf.django.piwik = 1.7
