--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,6 @@
 [buildout]
 extends = versions.cfg
-extensions = buildout-versions
-buildout_versions_file = versions.cfg
+show-picked-versions = true
 versions = versions
 parts = django articles harvest sphinx_config alertes_courriel
 find-links =
