--- a/versions.cfg
+++ b/versions.cfg
@@ -1,12 +1,10 @@
 [versions]
 # Versions installées sur le serveur de prod
 lxml = 2.2.8
-setuptools = 0.6c12dev-r88846
-distribute = 0.6.14
 
 # Versions sélectionnées avant l'utilisation de buildout-versions
 auf_references_client = 0.4.9
-Babel = 0.9.5
+Babel = 0.9.6
 caldav = 0.1.12
 chardet = 1.0.1
 pytz = 2010l
@@ -18,8 +16,6 @@ django-roa = 2.6.2
 django-admin-tools = 0.3.0
 django-sphinx = 2.2.3
 django-flash = 1.7.2
-PyYAML = 3.09
-South = 0.7.3
 django_exportateur = 1.0
 python-dateutil = 1.5
 auf.django.admingroup = 0.3dev
@@ -30,8 +26,6 @@ django-selectable = 0.2
 # Added by Buildout Versions at 2012-04-04 16:37:49.534685
 Django = 1.4.2
 auf-references-client = 0.4.9
-buildout-script = 0.2a1
-buildout-versions = 1.7
 django-appconf = 0.5
 django-debug-toolbar = 0.9.4
 django-exportateur = 1.0
@@ -73,25 +67,15 @@ python-memcached = 1.48
 # caldav==0.1.12
 vobject = 0.8.1c
 
-# Added by Buildout Versions at 2012-04-17 18:07:32.342631
-django-admin-tools = 0.4.1
-
 # Added by Buildout Versions at 2012-05-15 17:27:59.816025
 auf.django.references = 0.24
 
-# Added by Buildout Versions at 2012-09-17 11:03:22.899749
-auf.recipe.django = 2.1
-
-# Required by:
-# auf.recipe.django==2.1
-# djangorecipe==1.1.2
-zc.buildout = 1.6.3
-
-# Required by:
-# auf.recipe.django==2.1
-# djangorecipe==1.1.2
-zc.recipe.egg = 1.3.2
-
-# Added by Buildout Versions at 2012-11-06 14:51:17.543611
+# Added by buildout at 2013-08-16 12:35:58.253198
+PyYAML = 3.10
+South = 0.8.2
 auf.django.piwik = 1.8
-raven = 2.0.9
+auf.recipe.django = 2.2
+buildout-script = 0.2a1
+raven = 3.4.1
+zc.buildout = 2.2.0
+zc.recipe.egg = 2.0.0
