--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,11 +12,13 @@ find-links =
     http://pypi.auf.org/auf.recipe.django/
     http://pypi.auf.org/django-alphafilter/
     http://pypi.auf.org/auf.django.piwik/
+    http://pypi.auf.org/auf.django.pong/
 eggs =
     auf.django.admingroup
     auf.django.auth
     auf.django.references
     auf.django.piwik
+    auf.django.pong
     Babel
     BeautifulSoup
     caldav
