--- a/versions.cfg
+++ b/versions.cfg
@@ -79,3 +79,6 @@ buildout-script = 0.2a1
 raven = 3.4.1
 zc.buildout = 2.2.0
 zc.recipe.egg = 2.0.0
+
+# Added by buildout at 2013-08-16 16:00:28.590050
+auf.django.pong = 0.2.1
