upgrade admin-tool car on a des migrations dans la bd alors que la version actuelle na pas de migrations

--- a/versions.cfg
+++ b/versions.cfg
@@ -13,7 +13,6 @@ BeautifulSoup = 3.2.0
 django_pagination = 1.0.7
 django_sorting = 0.1
 django-roa = 2.6.2
-django-admin-tools = 0.3.0
 django-sphinx = 2.2.3
 django-flash = 1.7.2
 django_exportateur = 1.0
@@ -82,3 +81,6 @@ zc.recipe.egg = 2.0.0
 
 # Added by buildout at 2013-08-16 16:00:28.590050
 auf.django.pong = 0.2.1
+
+# Added by buildout at 2013-08-16 17:08:43.293695
+django-admin-tools = 0.5.1
