--- a/versions.cfg
+++ b/versions.cfg
@@ -8,7 +8,6 @@ Babel = 0.9.6
 caldav = 0.1.12
 chardet = 1.0.1
 pytz = 2010l
-feedparser = 4.1
 BeautifulSoup = 3.2.0
 django_pagination = 1.0.7
 django_sorting = 0.1
@@ -84,3 +83,6 @@ auf.django.pong = 0.2.3
 
 # Added by buildout at 2013-08-16 17:08:43.293695
 django-admin-tools = 0.5.1
+
+# Added by buildout at 2013-11-13 09:22:47.109063
+feedparser = 5.1.3
