--- a/versions.cfg
+++ b/versions.cfg
@@ -55,7 +55,7 @@ nose = 1.1.2
 
 # Required by:
 # django-exportateur==1.0
-odfpy = 0.9.4
+odfpy = 0.9.6
 
 # Required by:
 # auf-references-client==0.4.9
@@ -75,7 +75,6 @@ auf.django.piwik = 1.8
 auf.recipe.django = 2.3
 buildout-script = 0.2a1
 raven = 3.4.1
-zc.buildout = 2.2.0
 zc.recipe.egg = 2.0.0
 
 # Added by buildout at 2013-08-16 16:00:28.590050
@@ -86,3 +85,9 @@ django-admin-tools = 0.5.1
 
 # Added by buildout at 2013-11-13 09:22:47.109063
 feedparser = 5.1.3
+
+# Added by buildout at 2014-12-08 14:18:55.311306
+setuptools = 7.0
+
+# Added by buildout at 2014-12-08 14:49:59.448562
+zc.buildout = 2.2.5
