Utiliser le lxml du système

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 extends = versions.cfg
 show-picked-versions = true
 versions = versions
-parts = django articles harvest sphinx_config alertes_courriel
+parts = sysegg django articles harvest sphinx_config alertes_courriel
 find-links =
     http://pypi.auf.org/django-roa/
     http://pypi.auf.org/django_exportateur/
@@ -13,6 +13,20 @@ find-links =
     http://pypi.auf.org/django-alphafilter/
     http://pypi.auf.org/auf.django.piwik/
     http://pypi.auf.org/auf.django.pong/
+
+[sysegg]
+recipe = syseggrecipe
+force-sysegg = true
+eggs =
+    lxml
+    MySQL-python
+
+[django]
+recipe = auf.recipe.django
+project = auf_savoirs_en_partage
+wsgi = true
+settings = production
+extra-paths = auf_savoirs_en_partage
 eggs =
     auf.django.admingroup
     auf.django.auth
@@ -42,14 +56,6 @@ eggs =
     simplejson
     South
     raven
-
-[django]
-recipe = auf.recipe.django
-project = auf_savoirs_en_partage
-wsgi = true
-settings = production
-extra-paths = auf_savoirs_en_partage
-eggs = ${buildout:eggs}
 test = chercheurs savoirs sitotheque
 
 [articles]
