--- a/devel.cfg
+++ b/devel.cfg
@@ -5,6 +5,5 @@ update-versions-file = versions.cfg
 [django]
 wsgi = false
 settings = development
-eggs =
-    ${buildout:eggs}
+eggs +=
     django-debug-toolbar
