--- a/versions.cfg
+++ b/versions.cfg
@@ -1,8 +1,4 @@
 [versions]
-# Versions installées sur le serveur de prod
-lxml = 2.2.8
-
-# Versions sélectionnées avant l'utilisation de buildout-versions
 auf_references_client = 0.4.9
 Babel = 0.9.6
 caldav = 0.1.12
@@ -91,3 +87,6 @@ setuptools = 7.0
 
 # Added by buildout at 2014-12-08 14:49:59.448562
 zc.buildout = 2.2.5
+
+# Added by buildout at 2014-12-08 16:44:43.049200
+syseggrecipe = 1.3
